[gd_scene load_steps=20 format=2]

[ext_resource path="res://Resources/Sprites/Background/menu.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Level/PotionBuyScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level/WizardUpgradeScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level/TileUpgradeScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level/CoinsScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/Fonts/cloudy_store_potion_tile_heading.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/UI Elements/Window/ribbon.png" type="Texture" id=7]
[ext_resource path="res://Resources/UI Elements/Window/Ribbon_Black.png" type="Texture" id=8]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/back_yellow.png" type="Texture" id=9]
[ext_resource path="res://Scripts/LevelScene/Store.gd" type="Script" id=10]
[ext_resource path="res://Resources/UI Elements/Buttons/Cartoon RPG UI_Game Icon - Coin.png" type="Texture" id=11]
[ext_resource path="res://Resources/Sprites/Sounds/normal_button_click.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Sprites/Sounds/coin.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/back_yellow.png" type="Texture" id=14]
[ext_resource path="res://Resources/Fonts/cloudy_home_screen_headings.tres" type="DynamicFont" id=15]

[sub_resource type="Animation" id=1]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.45098 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.545098 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.596078 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.607843 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="StoreMenu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.534
anchor_top = 0.062
anchor_right = 0.534
anchor_bottom = 0.062
margin_left = -220.749
margin_top = -24.2
margin_right = 1109.25
margin_bottom = 145.8
rect_scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreHeading" type="Label" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.533
anchor_top = 0.053
anchor_right = 0.533
anchor_bottom = 0.053
margin_left = -79.268
margin_top = -10.4525
margin_right = 38.732
margin_bottom = 33.5475
custom_fonts/font = ExtResource( 15 )
text = "SHOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotionsScreen" parent="CanvasLayer/StoreMenu" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0.45098 )
anchor_left = 0.649
anchor_top = 0.481
anchor_right = 0.649
anchor_bottom = 0.481
margin_left = -220.576
margin_top = -160.6
margin_right = 348.424
margin_bottom = 263.4
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.9, 0.9 )

[node name="PotionScreenAnimation" type="AnimationPlayer" parent="CanvasLayer/StoreMenu/PotionsScreen"]
anims/appear = SubResource( 1 )

[node name="PotionsHeading" type="TextureButton" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.176
anchor_top = 0.24
anchor_right = 0.176
anchor_bottom = 0.24
margin_left = -135.224
margin_top = -12.0
margin_right = 1746.78
margin_bottom = 232.0
rect_scale = Vector2( 0.181, 0.342 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotionsLabel" type="Label" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.176
anchor_top = 0.227
anchor_right = 0.176
anchor_bottom = 0.227
margin_left = -23.682
margin_top = 16.2408
margin_right = 93.318
margin_bottom = 44.2408
custom_fonts/font = ExtResource( 6 )
text = "POTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardScreen" parent="CanvasLayer/StoreMenu" instance=ExtResource( 3 )]
visible = false
modulate = Color( 1, 1, 1, 0.545098 )
anchor_left = 0.649
anchor_top = 0.483
anchor_right = 0.649
anchor_bottom = 0.483
margin_left = -221.882
margin_top = -157.859
margin_right = 347.117
margin_bottom = 269.141
rect_scale = Vector2( 0.9, 0.9 )

[node name="WizardScreenAnimation" type="AnimationPlayer" parent="CanvasLayer/StoreMenu/WizardScreen"]
anims/appear = SubResource( 2 )

[node name="WizardHeading" type="TextureButton" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.174
anchor_top = 0.422
anchor_right = 0.174
anchor_bottom = 0.422
margin_left = -134.958
margin_top = -11.9117
margin_right = 1747.04
margin_bottom = 232.088
rect_scale = Vector2( 0.181, 0.342 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardLabel" type="Label" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.174
anchor_top = 0.411
anchor_right = 0.174
anchor_bottom = 0.411
margin_left = -24.634
margin_top = 15.8408
margin_right = 94.366
margin_bottom = 43.8408
custom_fonts/font = ExtResource( 6 )
text = "WIZARD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeScreen" parent="CanvasLayer/StoreMenu" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.649
anchor_top = 0.484
anchor_right = 0.649
anchor_bottom = 0.484
margin_left = -219.362
margin_top = -163.297
margin_right = 349.638
margin_bottom = 263.703
rect_scale = Vector2( 0.9, 0.9 )

[node name="UpgradeScreenAnimation" type="AnimationPlayer" parent="CanvasLayer/StoreMenu/UpgradeScreen"]
anims/appear = SubResource( 3 )

[node name="UpgradeHeading" type="TextureButton" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.18
anchor_top = 0.61
anchor_right = 0.18
anchor_bottom = 0.61
margin_left = -135.284
margin_top = -11.9859
margin_right = 1746.72
margin_bottom = 232.014
rect_scale = Vector2( 0.181, 0.342 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeLabel" type="Label" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.179
anchor_top = 0.599
anchor_right = 0.179
anchor_bottom = 0.599
margin_left = -29.754
margin_top = 16.0408
margin_right = 99.246
margin_bottom = 44.0408
custom_fonts/font = ExtResource( 6 )
text = "UPGRADE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsScreen" parent="CanvasLayer/StoreMenu" instance=ExtResource( 5 )]
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = 0.649
anchor_top = 0.484
anchor_right = 0.649
anchor_bottom = 0.484
margin_left = -219.242
margin_top = -161.675
margin_right = 349.758
margin_bottom = 265.325
rect_scale = Vector2( 0.9, 0.9 )

[node name="CoinsScreenAnimation" type="AnimationPlayer" parent="CanvasLayer/StoreMenu/CoinsScreen"]
anims/appear = SubResource( 4 )

[node name="CoinsHeading" type="TextureButton" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.181
anchor_top = 0.801
anchor_right = 0.181
anchor_bottom = 0.801
margin_left = -135.09
margin_top = -11.6782
margin_right = 1746.91
margin_bottom = 232.322
rect_scale = Vector2( 0.181, 0.342 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.176
anchor_top = 0.796
anchor_right = 0.176
anchor_bottom = 0.796
margin_left = -3.224
margin_top = 15.4
margin_right = 77.776
margin_bottom = 43.4
custom_fonts/font = ExtResource( 6 )
text = "COINS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.045
anchor_top = 0.063
anchor_right = 0.045
anchor_bottom = 0.063
margin_left = -35.2611
margin_top = -32.2456
margin_right = 142.739
margin_bottom = 147.755
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="CanvasLayer/StoreMenu"]
anchor_left = 0.968
anchor_top = 0.041
anchor_right = 0.968
anchor_bottom = 0.041
margin_left = 6.76794
margin_top = 4.4
margin_right = 23.7679
margin_bottom = 32.4
grow_horizontal = 0
custom_fonts/font = ExtResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cartoon RPG UI_Game Icon - Coin" type="Sprite" parent="CanvasLayer/StoreMenu/Coins"]
position = Vector2( -18.3064, 12.1458 )
scale = Vector2( 0.218, 0.201 )
texture = ExtResource( 11 )

[node name="NormalButtonClick" type="AudioStreamPlayer" parent="CanvasLayer/StoreMenu"]
stream = ExtResource( 12 )

[node name="CoinsSound" type="AudioStreamPlayer" parent="CanvasLayer/StoreMenu"]
stream = ExtResource( 13 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 5

[node name="BackgroundTint" type="TextureRect" parent="CanvasLayer2"]
visible = false
modulate = Color( 0.478431, 0.501961, 0.509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 936.0
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CanvasLayer/StoreMenu/PotionsHeading" to="." method="_on_PotionsHeading_button_up"]
[connection signal="button_up" from="CanvasLayer/StoreMenu/WizardHeading" to="." method="_on_WizardHeading_button_up"]
[connection signal="button_up" from="CanvasLayer/StoreMenu/UpgradeHeading" to="." method="_on_UpgradeHeading_button_up"]
[connection signal="button_up" from="CanvasLayer/StoreMenu/CoinsHeading" to="." method="_on_CoinsHeading_button_up"]
[connection signal="button_up" from="CanvasLayer/StoreMenu/BackButton" to="." method="_on_BackButton_button_up"]
